# fppo_cts

./: CONTRIBUTING.md  README.md  list_envs.py  pyproject.toml  setup.py  sitecustomize.py
crl_isaaclab/: __init__.py
crl_isaaclab/envs/: __init__.py  crl_manager_based_rl_env.py  crl_viewport_camera_controller.py
crl_isaaclab/envs/mdp/: __init__.py  (+5 more)
crl_isaaclab/managers/: crl_reward_manager.py
crl_isaaclab/terrains/: crl_terrain_importer.py  runtime.py
docs/: ALGORITHMS.md  ALGO_COMPARISON_PLAN.md  EXPERIMENTS.md  GALILEO_CURRICULUM.md  STRUCTURE.md  STUDENT_HISTORY_MEMO.md  STYLE.md
experiments/: README.md
experiments/galileo/: base.json  cost_limit_relaxed.json  fppo_smoke.json  terrain_hard.json
scripts/: run_tests.sh
scripts/rsl_rl/: __init__.py  cli_args.py  constraint_utils.py  demo.py  diagnose_galileo_stage1.py  dump_effective_params.py  effective_params.py  evaluation.py  experiment_manager.py  exporter.py  obs_layout.py  play.py  play_keyboard.py  runtime.py  train.py  train_galileo_cts_main.py  vecenv_wrapper.py
tests/: test_constrained_algorithm_utils.py  test_cts_config_and_registry.py  test_cts_policy_runtime.py  test_dagger_algorithm.py  test_experiment_manager.py  test_exporter_policy_cfg.py  test_galileo_command_behavior.py  test_galileo_symmetry.py  test_galileo_terrain_reward_scaling.py  test_obs_layout.py  test_runtime_utils.py  test_student_history_actor.py  test_student_teacher_alignment.py
tools/: __init__.py
tools/sim/: README.md  __init__.py  camera_depth_demo.py  safelocomotion_terrain_config.py  terrain_generator_demo.py
(+48 files in other folders)
